--- a/css/style.css
+++ b/css/style.css
@@ -94,9 +94,16 @@ body {
   align-items: flex-start;
   justify-content: space-between;
 }
+
 .posts {
+  display: none;
   width: 67%;
 }
+
+.posts.visible {
+  display: block;
+}
+
 .post {
   background-color: #fff;
   border: 1px solid #e8e8e8;
@@ -122,14 +129,19 @@ body {
   line-height: 22px;
 }
 .tags {
+  color: #bfbfbf;
   margin-bottom: 22px;
 }
 .tag {
   color: #bfbfbf;
   font-size: 14px;
   line-height: 22px;
-  margin-right: 10px;
+  margin-left: 10px;
   text-decoration: none;
+}
+
+.tag:first-child {
+  margin-left: 0;
 }
 .post-footer {
   border-top: 1px solid #e8e8e8;
@@ -402,6 +414,10 @@ body {
   width: 100%;
   margin-top: 20px;
 }
+
+.button-new-post.visible {
+  display: flex;
+}
 .icon-fire {
   fill: #fff;
   width: 11px;
@@ -469,15 +485,23 @@ body {
   color: #ffffff;
 }
 .add-post {
-  display: flex;
+  display: none;
+  width: 67%;
   flex-direction: column;
 }
+
+.add-post.visible {
+  display: flex;
+}
+
 .add-title,
+.add-tags,
 .add-text {
   background: #ffffff;
   border: 1px solid #e8e8e8;
   padding: 23px 30px;
   margin-bottom: 16px;
+  resize: none;
 }
 .add-text {
   min-height: 362px;
